<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/football_item"
            android:icon="@drawable/football_icon"
            android:title="@string/football"/>
        <item
            android:id="@+id/hockey_item"
            android:icon="@drawable/hockey_icon"
            android:title="@string/hockey"/>
        <item
            android:id="@+id/tennis_item"
            android:icon="@drawable/tennis_icon"
            android:title="@string/tennis"/>
        <item
            android:id="@+id/basketball_item"
            android:icon="@drawable/basketball_icon"
            android:title="@string/basketball"/>
        <item
            android:id="@+id/volleyball_item"
            android:icon="@drawable/volleyball_icon"
            android:title="@string/volleyball"/>
        <item
            android:id="@+id/cybersport_item"
            android:icon="@drawable/cybersport_icon"
            android:title="@string/cybersport"/>
    </group>
</menu>